# boop

./: .gitignore  CMakeLists.txt
asset/: recipe
asset/shader/gl/: background.frag  background.vert  blur.frag  blur.vert  common.frag  common.vert  histfade.frag  histfade.vert  menu.frag  menu.vert  post.frag  post.vert
asset/texture/: atlas.txt  menuatlas.txt
src/: Colors.hpp  Input.hpp  NetworkMatch.cpp  NetworkMatch.hpp  SyncObjectManager.hpp  Texture.hpp  UdpClient.cpp  UdpClient.hpp  UdpServer.cpp  UdpServer.hpp  WsaSingleton.cpp  WsaSingleton.hpp  main.cpp
src/render/: Renderable.hpp  Renderer.cpp  Renderer.hpp  RendererBackend.hpp
src/render/gl/: GL.hpp  GLBackgroundRenderer.cpp  GLBackgroundRenderer.hpp  GLCommonRenderer.cpp  GLCommonRenderer.hpp  GLConstants.hpp  GLMenuRenderer.cpp  GLMenuRenderer.hpp  GLPostProcessingRenderer.cpp  GLPostProcessingRenderer.hpp  GLRendererBackend.cpp  GLRendererBackend.hpp
src/sim/: Bot.cpp  Bot.hpp  Difficulty.cpp  Difficulty.hpp  Game.cpp  Game.hpp  GameMode.hpp  NetworkMatch.cpp  NetworkMatch.hpp  Simulation.cpp  Simulation.hpp  SimulationHost.cpp  SimulationHost.hpp  SoundManager.cpp  SoundManager.hpp  WinState.hpp
src/sim/menu/: Button.hpp  DifficultyMenu.cpp  DifficultyMenu.hpp  GameModeMenu.cpp  GameModeMenu.hpp  HostMenu.cpp  HostMenu.hpp  JoinMenu.cpp  JoinMenu.hpp  JoiningMenu.cpp  JoiningMenu.hpp  MainMenu.cpp  MainMenu.hpp  Menu.cpp  Menu.hpp  MenuService.cpp  MenuService.hpp
win/: CMakeLists.txt
win/include/win/: Display.hpp  DisplayBase.hpp  FrameTimingCalculator.hpp  Pool.hpp  SimSpeedRegulator.hpp  SimStateExchanger.hpp  TextRenderer.hpp  Utility.hpp  Win.hpp  Win32Display.hpp  X11Display.hpp
win/include/win/gl/: GL.hpp  GLTextRenderer.hpp
win/src/: FrameTimingCalculator.cpp  SimSpeedRegulator.cpp  TextRenderer.cpp  UdpClient.cpp  Win32Display.cpp  X11Display.cpp
win/src/gl/: GL.cpp  GLAtlas.cpp  GLTextRenderer.cpp
